# openlba

./: .gitignore  AUTHORS.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
GAMES/OPENLBA/: openlba
legacy/LBA1/: CMakeLists.txt
legacy/LBA1/LIB386/: CMakeLists.txt
legacy/LBA1/LIB386/LIB_3D/: P_ANIM.CPP  P_FUNC.cpp  P_SINTAB.CPP
legacy/LBA1/LIB386/LIB_MENU/: CMakeLists.txt
legacy/LBA1/LIB386/LIB_SVGA/: LIB_SVGA.H
legacy/LBA1/LIB386/LIB_SYS/: ADELINE.C  DLL.H  LIB_SYS.ASH
legacy/LBA1/SOURCES/: CMakeLists.txt  DEFINES.H  PERSO.C
legacy/LBA2/: CMakeLists.txt
legacy/LBA2/SOURCES/: GRILLE.CPP
src/: CMakeLists.txt
src/GAMES/LBA1/: CMakeLists.txt  DEFINES.H  PERSO.DEF  VERSION.C
src/GAMES/LBA2/: CMakeLists.txt  Makefile
src/GAMES/LBA2/3DEXT/: CMakeLists.txt
src/GAMES/OPENLBA/: CMakeLists.txt  GAMEMENU.CPP  GRILLE.CPP  INITADEL.C  INVENT.CPP  PERSO.CPP
src/GAMES/OPENLBA/3DEXT/: CMakeLists.txt  DECORS.CPP  EXTERN.H
src/LIB386/H/SVGA/: SCREEN.H
src/LIB386/H/SYSTEM/: TIMER.H
src/LIB386/SVGA/: SDL.CPP
src/LIB386/v1/: CMakeLists.txt
src/LIB386/v1/LIB_3D/: CMakeLists.txt  LIB_3D.H  P_OB_ISO.cpp  P_TRIGO.C
src/LIB386/v1/LIB_MENU/: MENU.C  MENUFUNC.C  SELECTOR.C
src/LIB386/v1/LIB_SVGA/: CMakeLists.txt
src/LIB386/v1/LIB_SYS/: CMakeLists.txt  LIB_SYS.H
src/LIB386/v3/AIL/NULL_BACKEND/: Makefile  cmake_install.cmake
src/LIB386/v3/pol_work/: POLYTEXT.CPP  POLYTEXZ.CPP  POLY_JMP.CPP
src/LIB386/v4/H/POLYGON/: POLY.H
src/LIB386/v4/H/SVGA/: VIDEO.H
src/LIB386/v4/OBJECT/: AFF_OBJ.CPP
src/LIB386/v4/pol_work/: POLY.CPP  POLYGTEX.CPP  POLYTEXT.CPP  POLYTEXZ.CPP  POLYTZG.CPP
src/SOURCES/: CMakeLists.txt  C_EXTERN.H  DEFINES.H  GAMEMENU.CPP  GAMEMENU.H  GLOBAL.CPP  GRILLE.CPP  OBJECT.CPP  PERSO.CPP  PERSO.H  SAVEGAME.CPP
src/SOURCES/3DEXT/: CMakeLists.txt
