add_subdirectory(3DEXT)

# General sources
set(SOURCES_FILES AMBIANCE.CPP ANIMTEX.CPP BEZIER.CPP BUGGY.CPP CHEATCOD.CPP COMPORTE.CPP CONFIG.CPP CREDITS.CPP
        DART.CPP DIRECTORIES.CPP DISKFUNC.CPP EXTFUNC.CPP EXTRA.CPP FICHE.CPP FLOW.CPP GAMEMENU.CPP GERELIFE.CPP
        GERETRAK.CPP GLOBAL.CPP GRILLE.CPP HOLOBODY.CPP HOLOGLOB.CPP HOLOPLAN.CPP IMPACT.CPP INCRUST.CPP INITADEL.C
        INPUT.CPP INTEXT.CPP INVENT.CPP LZSS.CPP MEM.CPP MESSAGE.CPP MUSIC.CPP OBJECT.CPP PATCH.CPP PERSO.CPP
        PLAYACF.CPP POF.CPP RAIN.CPP SAVEGAME.CPP SCAN.CPP SORT.CPP VALIDPOS.CPP VERSION.CPP WAGON.CPP ZV.CPP
        COMPRESS.CPP FIRE.CPP FLOW_A.CPP FUNC.CPP GRILLE_A.CPP PLASMA.CPP JOYSTICK.CPP)


add_executable(openlba ${SOURCES_FILES})
target_link_libraries(openlba PRIVATE 3dext 3D ail ani fio obj poly svg sys SDL2::SDL2 SDL2::SDL2main ${SDL2_LIBRARIES})
if (WIN32)
    target_link_libraries(openlba PRIVATE gdi32 user32 ddraw winmm kernel32)
endif ()

target_include_directories(openlba PRIVATE ../../LIB386/v4/H)
target_compile_definitions(openlba PRIVATE ONE_GAME_DIRECTORY LBA_GAME CDROM
        $<$<STREQUAL:MVIDEO_BACKEND,smacker>:USE_MVIDEO_SMACKER>
        $<$<STREQUAL:MVIDEO_BACKEND,none>:USE_MVIDEO_NONE>)
