include_directories(LIB_3D)
#include_directories(LIB_CD)
#include_directories(LIB_MENU)
#include_directories(LIB_MIDI)
#include_directories(LIB_MIX)
#include_directories(LIB_SAMP)
#include_directories(LIB_SVGA)
include_directories(LIB_SYS)

add_subdirectory(LIB_3D)
#add_subdirectory(LIB_CD)
#add_subdirectory(LIB_MENU)
#add_subdirectory(LIB_MIDI)
#add_subdirectory(LIB_MIX)
#add_subdirectory(LIB_SAMP)
#add_subdirectory(LIB_SVGA)
add_subdirectory(LIB_SYS)
