set(SOURCES_FILES GIF.C INITMODE.C LBM.C MASKGPH.C PCX.C RECT.C S_DLL.C S_MOUSE.C 
                  S_TEXT.C)
set(SOURCES_FILES_ASM GRAPH_A.ASM FONT_A.ASM INITSVGA.ASM MASK_A.ASM GRAPHMSK.ASM
                      S_MOUSEA.ASM S_BOX.ASM S_BLOCK2.ASM S_BLOCK3.ASM S_LINE.ASM
                      S_PAL.ASM S_PLOT.ASM S_POLY.ASM S_SCREEN.ASM S_STRING.ASM
                      S_FILLV.ASM S_PHYS.ASM TEXTURE.ASM VESA.ASM ZOOM.ASM)

add_library(LIB_SVGA ${SOURCES_FILES} ${SOURCES_FILES_ASM})
