set(SOURCES_FILES ADELINE.C DEF_FILE.C DIVERS.C DLLLOAD.C FILES.C HQ_MEM.C HQ_R_M.C
                  HQ_RESS.C KEYB.C LOADMALL.C LOADSAVE.C MALLOC.C SYSTEM.C TIMER.C)
set(SOURCES_FILES_ASM BUFFER_A.ASM EXPAND.ASM FILES_A.ASM HQR.ASM KEYBOARD.ASM
                      TIMER_A.ASM)

add_library(LIB_SYS ${SOURCES_FILES} ${SOURCES_FILES_ASM})
